# hara.lang

./: .classpath  .gitignore  .project  AGENTS.md  ARCHITECTURE.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  Makefile  README.md  SPECIFICATION.md  USAGE.md  builtins.md  dependency-reduced-pom.xml  fix_block_g_refs.py  fix_g_imports.py  fix_imports.py  fix_max.py  fix_missing_imports.py  fix_num_imports.py  fix_obj_persistent.py  fix_p_imports.py  fix_protocol_self_refs.py  fix_refactor_inheritance.py  fix_remaining_refactor.py  hara  mkdocs.yml  parse_jacoco.py  pom.xml  refactor_fn_reflect.py  refactor_num_max.py  refactor_num_min.py  refactor_obj_mt.py  refactor_ut.py  refactor_ut_as_collections.py  remove_obj.py  test_output.txt  uncovered_static_methods.md  unit_test_action_items.md  update_codebase.py  (+1 more)
wasm/: Cargo.toml
wasm/extensions/blockchain-proof-noir/: hara.build.edn  hara.extension.edn
wasm/extensions/crypto-hash-sha256/: Cargo.toml
wasm/extensions/ledger-noir/: hara.build.edn
wasm/raw/: Cargo.toml
wasm/src/: core.rs  extension.rs  fiber.rs  hta.rs  kernel.rs  lang.rs  lib.rs  native_extension.rs  process_extension.rs  resp.rs  task.rs  wasmtime_provider.rs
wasm/tests/: wasm_extensions.rs
wasm/web/: hta-browser.js  hta-browser.spec.js  hta-worker.js  hta.js  hta.test.js  index.html  noir-browser.html  noir-browser.js  noir-browser.spec.js  noir-loader.js  noir-loader.test.js  package-lock.json  package-noir-extension.mjs  package.json  playground.css  playground.js  playwright.config.js  vite.noir-node.config.js  vite.noir.config.js
(+1212 files in other folders)
