[package]
name = "hara-wasm"
version = "0.1.0"
edition = "2021"
description = "Portable browser runtime slice for Hara"
license = "EPL-2.0"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "18.0.0", default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]

